@@ -2,10 +2,11 @@ package com.expensetracker.security;
 
 import com.expensetracker.model.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -21,7 +22,9 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();}
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRoleAsString()));
+    }
+
 
     @Override
     public String getPassword() {
